[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scene/Boundary.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/BallContainer.gd" type="Script" id=4]
[ext_resource path="res://scene/StartPanel.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -38.0
margin_top = -14.0
margin_right = 306.0
margin_bottom = 619.0
color = Color( 0.870588, 0.87451, 0.87451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 212.615, 303.054 )

[node name="Hoof" parent="." instance=ExtResource( 3 )]
position = Vector2( 87.464, 45 )
z_index = 1

[node name="Leftbarrier" parent="." instance=ExtResource( 3 )]
position = Vector2( -6.89819, 282.895 )
rotation = 1.5708
scale = Vector2( 1.2, 1 )

[node name="Rightbarrier" parent="." instance=ExtResource( 3 )]
position = Vector2( 268.474, 283.152 )
rotation = 1.5708
scale = Vector2( 1.2, 1 )

[node name="BallContainer" type="Node" parent="."]
script = ExtResource( 4 )

[node name="StartPanel" parent="." instance=ExtResource( 5 )]

[node name="CounterTimer" type="Timer" parent="."]
wait_time = 16.0

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 60.0
[connection signal="ball_creation" from="Player" to="." method="_on_ball_creation"]
[connection signal="start_game" from="StartPanel" to="." method="new_game"]
[connection signal="timeout" from="CounterTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
